frontend basico de la pagina de doctor. (no lo sigo mas pq Sofia no quiere, que lo complete quien debe)

--- a/src/doctor/doctorMenu.html
+++ b/src/doctor/doctorMenu.html
@@ -4,17 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina de Doctor</title>
+    <link rel="stylesheet" href="doctorStyles.css">
 </head>
 <body>
-    <h1>Bienvenido Doctor!</h1>
-    <h2></h2>
-    <nav>
-        <ul>
-            <li><a href="viewPatients.html">Ver Pacientes</a></li>
-            <li><a href="manageAppointments.html">Gestionar Citas</a></li>
-            <li><a href="updateProfile.html">Actualizar Perfil</a></li>
-            <li><a href="logout.html">Cerrar Sesión</a></li>
+    <div class="titulo">
+    <h1>Bienvenido Doctor!</h1> <!--Reemplacen este titulo por la imagen del Canva cuando la tengan. Yo no pienso perder el tiempo buscandola-->
+    <h2 id="pacientes">
+        <a href="verPacientes.html">Ver Pacientes</a></li>
+        <a href="logout.html">Cerrar Sesión</a>
+    </h2>
+    </div>
+    <nav class="lista">
+        <div id="tituloConsultas">
+            <h1>Consultas</h1>
+        </div>
+        <ul id="pruebas">
+            <a href="Citas?.html">Texto de prueba (cambiar cuando se requiera)</a>
+            <a href="Perfil.html">Texto de prueba (cambiar cuando se requiera)</a>
         </ul>
     </nav>  
 </body>
 </html>
+
