--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p id="loginError" style="color:red;"></p>
     <button type="submit">Ingresar</button>
     <button type="button" id="recoverBtn">Recuperar contraseña</button>
-    <a href="./register.html">Crear cuenta</a>
+    <a href="././src/register/register.html">Crear cuenta</a>
   </form>
 
   <script src="./dist/login.js" type="module"></script>
