arreglos pagina eli

--- a/src/doctor/doctorMenu.html
+++ b/src/doctor/doctorMenu.html
@@ -1,19 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina de Doctor</title>
-    <link rel="stylesheet" href="doctorStyles.css">
+<meta charset="UTF-8"> 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Página de Doctor</title>
+<link rel="stylesheet" href="doctorStyles.css">
 </head>
 <body>
     <div class="titulo">
-    <h1>Bienvenido Doctor!</h1> <!--Reemplacen este titulo por la imagen del Canva cuando la tengan. Yo no pienso perder el tiempo buscandola-->
-    <h2 id="pacientes">
-        <a href="verPacientes.html">Ver Pacientes</a></li>
-        <a href="logout.html">Cerrar Sesión</a>
-    </h2>
+        <h1>Bienvenido Doctor!</h1>
+        <h2 id="pacientes">
+            <a href="verPacientes.html">Ver Pacientes</a>
+            <a href="logout.html">Cerrar Sesión</a>
+        </h2>
     </div>
+
+    <div class="mensajesBox">
+        <h2><a href="https://web.whatsapp.com/" target="_blank">Ver Mensajes de Clientes</a></h2>
+    </div>
+
     <nav class="lista">
         <div id="tituloConsultas">
             <h1>Consultas</h1>
