--- a/src/cupones/pago.html
+++ b/src/cupones/pago.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Cupones</title>
 </head>
+
 <body>
   <h1>Calculadora de Compra</h1>
 
@@ -26,5 +28,8 @@
   </form>
 
   <h2 id="resultado"></h2>
+  <p><a href="gestionCupones.html">admin</a></p>
+  <script src="cupon.js"></script>
 </body>
+
 </html>
