arreglos al login y signup ññeñeñeñe

--- a/src/doctor/doctorMenu.html
+++ b/src/doctor/doctorMenu.html
@@ -8,7 +8,7 @@
         <h1>Bienvenido Doctor!</h1>
         <h2 id="pacientes">
             <a href="verPacientes.html">Ver Pacientes</a>
-            <a href="logout.html">Cerrar Sesión</a>
+            <a href="../login/login.html">Cerrar Sesión</a>
         </h2>
     </div>
 
