--- a/src/register/register.html
+++ b/src/register/register.html
@@ -27,7 +27,7 @@
     <br>
     <p id="regError" style="color:red;"></p>
     <button type="submit">Registrar</button>
-    <a href="./index.html">Volver al login</a>
+    <a href="../login/login.html">Volver al login</a>
   </form>
 
   <script src="./dist/register.js" type="module"></script>
