arreglos a la pagina pt1
A esto le falta algo, lo sigo el jueves, no me lo mergees hasta que te diga chaza.

Es un estilo muy asi nomas, todavia le falta para ser parecido al del Canva, pero es algo.

--- a/src/cupones/gestionCupones.html
+++ b/src/cupones/gestionCupones.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Administrar Cupones</title>
+  <link rel="stylesheet" href="cuponesStyles.css">
 </head>
 <body>
   <h1>Administrar Cupones</h1>
