--- a/src/login/login.html
+++ b/src/login/login.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login</title>
+  <link rel="stylesheet" href="loginStyles.css">
   <link rel="icon" href="data:,">
 </head>
 <body>
@@ -19,7 +20,7 @@
     <p id="loginError" style="color:red;"></p>
     <button type="submit">Ingresar</button>
     <button type="button" id="recoverBtn">Recuperar contraseña</button>
-    <a href="././src/register/register.html">Crear cuenta</a>
+    <a href="../register/register.html">Crear cuenta</a>
   </form>
 
   <script src="./dist/login.js" type="module"></script>
