--- a/frontend/vistas/index.html
+++ b/frontend/vistas/index.html
@@ -29,12 +29,19 @@
   <section>
     <h2>Acciones disponibles</h2>
     <div class="cards">
+      <a href="/src/register/register.html">
       <div class="card"><i class="fa-solid fa-user-plus"></i><h3>Registrarse / Iniciar sesión</h3></div>
+      </a>
       <div class="card"><i class="fa-solid fa-dog"></i><h3>Ver animales en adopción</h3></div>
       <div class="card"><i class="fa-solid fa-clipboard-list"></i><h3>Completar formulario de adopción</h3></div>
       <div class="card"><i class="fa-solid fa-store"></i><h3>Comprar productos</h3></div>
+      
+      <a href="/src/cupones/pago.html">
       <div class="card"><i class="fa-solid fa-tag"></i><h3>Aplicar cupones o descuentos</h3></div>
+      </a>
+      <a href="https://wa.me/5491168353038">
       <div class="card"><i class="fa-brands fa-whatsapp"></i><h3>Chatear con veterinario</h3></div>
+      </a>
       <div class="card"><i class="fa-solid fa-wallet"></i><h3>Pagar con billetera virtual</h3></div>
     </div>
   </section>
