--- a/frontend/cupones/gestionCupones.html
+++ b/frontend/cupones/gestionCupones.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Administrar Cupones</title>
-  <link rel="stylesheet" href="cuponesStyles.css">
+  <link rel="stylesheet" href="../styles/cuponesStyles.css">
 </head>
 <body>
   <h1>Administrar Cupones</h1>
@@ -19,6 +19,6 @@
 
   <p><a href="pago.html">Volver a la calculadora</a></p>
 
-  <script src="adminCupones.js"></script>
+  <script src="/Backend/adminCupones.js"></script>
 </body>
 </html>
