--- a/frontend/cupones/pago.html
+++ b/frontend/cupones/pago.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Cupones</title>
-  <link rel="stylesheet" href="pagoStyles.css">
+  <link rel="stylesheet" href="../styles/pagoStyles.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
 
   <h2 id="resultado"></h2>
   <p><a href="gestionCupones.html">admin</a></p>
-  <script src="cupon.js"></script>
+  <script src="/Backend/cupon.js"></script>
 </body>
 
 </html>
