--- a/frontend/login/login.html
+++ b/frontend/login/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login</title>
-  <link rel="stylesheet" href="loginStyles.css">
+  <link rel="stylesheet" href="../styles/loginStyles.css">
   <link rel="icon" href="data:,">
 </head>
 <body>
