--- a/frontend/vistas/register/register.html
+++ b/frontend/vistas/register/register.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Registro</title>
   <link rel="stylesheet" href="/frontend/styles/registerStyles.css">
   <link rel="icon" href="data:,">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 </head>
+
 <body>
-  <h1>Crear cuenta</h1>
+  <header>
+    <div>
+      <i class="fa-solid fa-user fa-xl" style="color: #ffffff;"></i>
+      <h1>Crear Cuenta</h1>
+    </div>
+  </header>
 
   <form id="registerForm" novalidate>
     <label>Nombre:</label>
@@ -33,5 +41,5 @@
 
   <script src="./dist/register.js" type="module"></script>
 </body>
-</html>
 
+</html>
