dejo asentado algo para seguirlo mañana
NO TOCAR, LOS ASESINO UNO POR UNO SI LO HACEN

--- a/frontend/vistas/register/register.html
+++ b/frontend/vistas/register/register.html
@@ -12,10 +12,12 @@
 
 <body>
   <header>
+    <a href="/frontend/vistas/index.html">
     <div>
       <i class="fa-solid fa-user fa-xl" style="color: #ffffff;"></i>
       <h1>Crear Cuenta</h1>
     </div>
+    </a>
   </header>
 
   <form id="registerForm" novalidate>
