--- a/frontend/vistas/cupones/gestionCupones.html
+++ b/frontend/vistas/cupones/gestionCupones.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Administrar Cupones</title>
-  <link rel="stylesheet" href="../styles/cuponesStyles.css">
+  <link rel="stylesheet" href="/frontend/styles/cuponesStyles.css">
 </head>
 <body>
   <h1>Administrar Cupones</h1>
