--- a/frontend/vistas/login/reset.html
+++ b/frontend/vistas/login/reset.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Restablecer contrasena</title>
+  <link rel="stylesheet" href="/frontend/styles/reset.css">
 </head>
 <body>
   <h2>Restablecer contrasena</h2>
