solamente añadi un link, lo commiteo en main porque literalmente es un link

--- a/frontend/vistas/adopciones/adopciones.html
+++ b/frontend/vistas/adopciones/adopciones.html
@@ -72,6 +72,6 @@
 
   <footer id="pie">© Veterinaria</footer>
 
-  <script src="app.js" type="module"></script>
+  <script src="/dist/adopciones.js" type="module"></script>
 </body>
 </html>
