--- a/frontend/vistas/index.html
+++ b/frontend/vistas/index.html
@@ -29,11 +29,16 @@
   <section>
     <h2>Acciones disponibles</h2>
     <div class="cards">
-      <a href="/src/register/register.html">
+      <a href="../vistas/register/register.html">
       <div class="card"><i class="fa-solid fa-user-plus"></i><h3>Registrarse / Iniciar sesión</h3></div>
       </a>
+      
       <div class="card"><i class="fa-solid fa-dog"></i><h3>Ver animales en adopción</h3></div>
+
+      <a href="../vistas/Formulario/formulario.html">
       <div class="card"><i class="fa-solid fa-clipboard-list"></i><h3>Completar formulario de adopción</h3></div>
+      </a>
+
       <div class="card"><i class="fa-solid fa-store"></i><h3>Comprar productos</h3></div>
       
       <a href="/src/cupones/pago.html">
