--- a/frontend/vistas/doc.html
+++ b/frontend/vistas/doc.html
@@ -14,7 +14,7 @@
       <ul>
         <li><a href="#">Consultas</a></li>
         <li><a href="#">Pacientes</a></li>
-        <li><a href="#">Historial</a></li>
+        <li><a href="../vistas/Verhistorial/Acthistorial.html">Historial</a></li>
       </ul>
     </nav>
   </header>
@@ -28,11 +28,19 @@
   <section>
     <h2>Funciones disponibles</h2>
     <div class="cards">
+      <a href="https://wa.me">
       <div class="card"><i class="fa-solid fa-inbox"></i><h3>Ver mensajes recibidos</h3></div>
-      <div class="card"><i class="fa-solid fa-reply"></i><h3>Responder consultas</h3></div>
+      </a>
+
+      <a href="../vistas/Verhistorial/Acthistorial.html">
       <div class="card"><i class="fa-solid fa-notes-medical"></i><h3>Actualizar historial clínico</h3></div>
+      </a>
+
       <div class="card"><i class="fa-solid fa-dog"></i><h3>Consultar fichas de animales</h3></div>
+      
+      <a href="../vistas/verUsuarios/verusuario.html">
       <div class="card"><i class="fa-solid fa-user"></i><h3>Ver información del usuario</h3></div>
+      </a>  
     </div>
   </section>
 
