--- a/frontend/vistas/index.html
+++ b/frontend/vistas/index.html
@@ -36,7 +36,7 @@
       <div class="card"><i class="fa-solid fa-clipboard-list"></i><h3>Completar formulario de adopción</h3></div>
       <div class="card"><i class="fa-solid fa-store"></i><h3>Comprar productos</h3></div>
       
-      <a href="/src/cupones/pago.html">
+      <a href="/frontend/vistas/cupones/pago.html">
       <div class="card"><i class="fa-solid fa-tag"></i><h3>Aplicar cupones o descuentos</h3></div>
       </a>
       <a href="https://wa.me/5491168353038">
