--- a/frontend/vistas/register/register.html
+++ b/frontend/vistas/register/register.html
@@ -8,12 +8,15 @@
 <body>
 
   <header>
-    <a href="/frontend/vistas/index.html">
-    <div>
-      <i class="fa-solid fa-user fa-xl" style="color: #ffffff;"></i>
-      <h1>Crear Cuenta</h1>
-    </div>
-    </a>
+    <nav>
+      <div class="logo"><i class="fa-solid fa-paw"></i> VetCare</div>
+      <ul>
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="#">Adopciones</a></li>
+        <li><a href="#">Tienda</a></li>
+        <li><a href="#">Mis Mascotas</a></li>
+      </ul>
+    </nav>
   </header>
 
   <form id="registerForm" novalidate>
