conexion tienda cupones

--- a/frontend/vistas/tienda/tienda.html
+++ b/frontend/vistas/tienda/tienda.html
@@ -54,11 +54,16 @@
       </div>
 
       <h3>Total: $<span id="total">0</span></h3>
+      <div id="cupon-area">
+        <input type="text" id="cupon" placeholder="Ingresar cupón">
+        <button id="aplicar-cupon">Aplicar cupón</button>
+        <p id="msg-cupon"></p>
+      </div>
 
       <button id="vaciar">Vaciar Carrito</button>
       <button id="comprar">Procesar Compra</button>
     </section>
   </main>
-  <script type="module" src="/Backend/ecomerce/mainTienda.js"></script>
+  <script type="module" src="/dist/Backend/ecomerce/mainTienda.js"></script>
 </body>
 </html>
