--- a/frontend/vistas/cupones/pago.html
+++ b/frontend/vistas/cupones/pago.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Cupones</title>
-  <link rel="stylesheet" href="../styles/pagoStyles.css">
+  <link rel="stylesheet" href="../../styles/pagoStyles.css">
 </head>
 
 <body>
