--- a/frontend/vistas/register/register.html
+++ b/frontend/vistas/register/register.html
@@ -3,24 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Registro</title>
-  <link rel="stylesheet" href="/frontend/styles/registerStyles.css">
+  <link rel="stylesheet" href="/veterinaria-proyecto/frontend/styles/registerStyles.css">
 </head>
 <body>
+  <h2>Registro</h2>
 
-  <header>
-    <nav>
-      <div class="logo"><i class="fa-solid fa-paw"></i> VetCare</div>
-      <ul>
-        <li><a href="../index.html">Inicio</a></li>
-        <li><a href="#">Adopciones</a></li>
-        <li><a href="#">Tienda</a></li>
-        <li><a href="#">Mis Mascotas</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <form id="registerForm" novalidate>
-
+  <form id="registerForm">
     <label>Nombre:</label>
     <input type="text" id="name" required><br>
 
