--- a/frontend/vistas/admin.html
+++ b/frontend/vistas/admin.html
@@ -11,12 +11,6 @@
   <header>
     <nav>
       <div class="logo"><i class="fa-solid fa-gear"></i> VetCare Admin</div>
-      <ul>
-        <li><a href="#">Usuarios</a></li>
-        <li><a href="#">Productos</a></li>
-        <li><a href="#">Adopciones</a></li>
-        <li><a href="#">Reportes</a></li>
-      </ul>
     </nav>
   </header>
 
@@ -29,14 +23,24 @@
   <section>
     <h2>Permisos del administrador</h2>
     <div class="cards">
+      <a href="/frontend/vistas/verUsuarios/GestionarUser.html">
       <div class="card"><i class="fa-solid fa-user-gear"></i><h3>Gestionar usuarios</h3></div>
+      </a>
+
       <div class="card"><i class="fa-solid fa-box"></i><h3>Administrar productos</h3></div>
+     
       <div class="card"><i class="fa-solid fa-paw"></i><h3>Controlar fichas de animales</h3></div>
+
       <a href="/frontend/vistas/cupones/gestionCupones.html">
       <div class="card"><i class="fa-solid fa-tags"></i><h3>Generar cupones</h3></div>
       </a>
+      <a href="/frontend/vistas/formulario/listadelosformularios.html">
       <div class="card"><i class="fa-solid fa-clipboard-check"></i><h3>Aprobar solicitudes de adopción</h3></div>
+      </a>
+      <a href="/frontend/vistas/Metricas/metricas.html">
       <div class="card"><i class="fa-solid fa-chart-line"></i><h3>Ver métricas y estadísticas</h3></div>
+      </a>
+
     </div>
   </section>
 
