--- a/frontend/vistas/cupones/pago.html
+++ b/frontend/vistas/cupones/pago.html
@@ -30,7 +30,7 @@
 
   <h2 id="resultado"></h2>
   <p><a href="gestionCupones.html">admin</a></p>
-  <script src="/dist/Backend/cupon.js"></script>
+  <script src="/Backend/cupon.js"></script>
 </body>
 
 </html>
