algunos detalles del front
front

--- a/frontend/vistas/index.html
+++ b/frontend/vistas/index.html
@@ -10,7 +10,7 @@
 <body class="usuario">
   <header>
     <nav>
-      <div class="logo"><i class="fa-solid fa-paw"></i> VetCare</div>
+      <div class="logo"><i class="fa-solid fa-paw"></i> VetCarruseles</div>
       <ul>
         <li><a href="#">Inicio</a></li>
         <li><a href="#">Adopciones</a></li>
@@ -21,8 +21,8 @@
   </header>
 
   <section class="hero">
-    <h1>Bienvenido a VetCare 🐾</h1>
-    <p>Adopta, compra productos y gestiona la salud de tus mascotas desde un solo lugar.</p>
+    <h1>Bienvenido a Veterinaria Los carruseles 🐾</h1>
+    <p>Adopta, compra productos y cuieda la salud de tus mascotas <br>¡Todo desde un solo lugar!</p>
     <button class="btn">Ver animales disponibles</button>
   </section>
 
@@ -45,8 +45,8 @@
   </section>
 
   <footer>
-    <p><i class="fa-solid fa-paw"></i> VetCare - Usuario</p>
-    <p class="copy">© 2025 VetCare - Todos los derechos reservados</p>
+    <p><i class="fa-solid fa-paw"></i> VetCarruseles - Usuario</p>
+    <p class="copy">© 2025 VetCarruseles - Todos los derechos reservados</p>
   </footer>
 </body>
 </html>
