--- a/frontend/vistas/admin.html
+++ b/frontend/vistas/admin.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VetCare - Administrador</title>
+  <title>VetCarruseles - Administrador</title>
   <link rel="stylesheet" href="../styles/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body class="admin">
   <header>
     <nav>
-      <div class="logo"><i class="fa-solid fa-gear"></i> VetCare Admin</div>
+      <div class="logo"><i class="fa-solid fa-gear"></i> VetCarruseles Admin</div>
     </nav>
   </header>
 
@@ -45,8 +45,8 @@
   </section>
 
   <footer>
-    <p><i class="fa-solid fa-gear"></i> VetCare - Administrador</p>
-    <p class="copy">© 2025 VetCare - Todos los derechos reservados</p>
+    <p><i class="fa-solid fa-gear"></i> VetCarruseles - Administrador</p>
+    <p class="copy">© 2025 VetCarruseles - Todos los derechos reservados</p>
   </footer>
 </body>
 </html>
