--- a/frontend/vistas/doc.html
+++ b/frontend/vistas/doc.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VetCare - Doctor</title>
+  <title>VetCarruseles - Doctor</title>
   <link rel="stylesheet" href="../styles/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body class="doctor">
   <header>
     <nav>
-      <div class="logo"><i class="fa-solid fa-stethoscope"></i> VetCare Doctor</div>
+      <div class="logo"><i class="fa-solid fa-stethoscope"></i> VetCarruseles Doctor</div>
       <ul>
         <li><a href="#">Consultas</a></li>
         <li><a href="#">Pacientes</a></li>
@@ -20,15 +20,14 @@
   </header>
 
   <section class="hero">
-    <h1>Panel del Veterinario</h1>
+    <h1>Panel de Veterinario</h1>
     <p>Atendé consultas, actualizá historiales y gestioná tus pacientes.</p>
-    <button class="btn">Ver mensajes de usuarios</button>
   </section>
 
   <section>
     <h2>Funciones disponibles</h2>
     <div class="cards">
-      <div class="card"><i class="fa-solid fa-inbox"></i><h3>Ver mensajes recibidos</h3></div>
+      <!-- <div class="card"><i class="fa-solid fa-inbox"></i><h3>Ver mensajes recibidos</h3></div> -->
       <div class="card"><i class="fa-solid fa-reply"></i><h3>Responder consultas</h3></div>
       <div class="card"><i class="fa-solid fa-notes-medical"></i><h3>Actualizar historial clínico</h3></div>
       <div class="card"><i class="fa-solid fa-dog"></i><h3>Consultar fichas de animales</h3></div>
@@ -37,8 +36,8 @@
   </section>
 
   <footer>
-    <p><i class="fa-solid fa-stethoscope"></i> VetCare - Doctor</p>
-    <p class="copy">© 2025 VetCare - Todos los derechos reservados</p>
+    <p><i class="fa-solid fa-stethoscope"></i> VetCarruseles - Doctor</p>
+    <p class="copy">© 2025 VetCarruseles - Todos los derechos reservados</p>
   </footer>
 </body>
 </html>
