rework-me-cago-en-la-puta

--- a/frontend/vistas/adopciones/adopciones.html
+++ b/frontend/vistas/adopciones/adopciones.html
@@ -72,6 +72,6 @@
 
   <footer id="pie">© Veterinaria</footer>
 
-  <script src="/dist/adopciones.js" type="module"></script>
+  <script type="module" src="/frontend/pages/adopciones.js"></script>
 </body>
 </html>
