--- a/frontend/vistas/cupones/gestionCupones.html
+++ b/frontend/vistas/cupones/gestionCupones.html
@@ -31,6 +31,6 @@
 
   <p><a href="pago.html">Volver a la calculadora</a></p>
 
-  <script src="/Backend/adminCupones.js"></script>
+  <script type="module" src="/frontend/pages/cupones.js"></script>
 </body>
 </html>
