--- a/frontend/vistas/login/login.html
+++ b/frontend/vistas/login/login.html
@@ -25,49 +25,16 @@
 
   <form id="loginForm">
     <label>Email:</label>
-    <input type="email" id="email" required><br>
+    <input type="email" id="loginEmail" required><br>
     <label>Contrasena:</label>
-    <input type="password" id="password" required><br>
+    <input type="password" id="loginPass" required><br>
     <button type="submit">Ingresar</button>
   </form>
 
-  <button id="forgotBtn">Recuperar contrasena</button>
-  <p id="msg"></p>
+  <button id="recoverBtn">Recuperar contrasena</button>
+  <p id="loginError"></p>
 
-  <script>
-    const API = "http://localhost:3001";
-    const TARGET = "/frontend/vistas/index.html";  // <- destino despues de login
-
-    document.getElementById("loginForm").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const email = document.getElementById("email").value.trim();
-      const password = document.getElementById("password").value;
-      const res = await fetch(API + "/api/login", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        credentials: "include",
-        body: JSON.stringify({ email, password })
-      });
-      const data = await res.json();
-      if (data.ok) {
-        window.location.href = TARGET;
-      } else {
-        document.getElementById("msg").textContent = data.error || "Error al iniciar sesion";
-      }
-    });
-
-    document.getElementById("forgotBtn").addEventListener("click", async () => {
-      const email = document.getElementById("email").value.trim();
-      if (!email) { alert("Ingresa un email primero"); return; }
-      const res = await fetch(API + "/api/forgot-password", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ email })
-      });
-      await res.json();
-      alert("Si existe una cuenta con ese email, se envio el link de recuperacion.");
-    });
-  </script>
+  <script type="module" src="/frontend/pages/login.js"></script>
 </body>
 
 </html>
