--- a/frontend/vistas/cupones/gestionCupones.html
+++ b/frontend/vistas/cupones/gestionCupones.html
@@ -9,7 +9,7 @@
     <nav>
       <div class="logo"><i class="fa-solid fa-gear"></i> VetCare Admin</div>
       <ul>
-        <li><a href="#">Usuarios</a></li>
+        <li><a href="../admin.html">Inicio</a></li>
         <li><a href="#">Productos</a></li>
         <li><a href="#">Adopciones</a></li>
         <li><a href="#">Reportes</a></li>
@@ -28,8 +28,6 @@
 
   <h3>Cupones actuales:</h3>
   <ul id="listaCupones"></ul>
-
-  <p><a href="pago.html">Volver a la calculadora</a></p>
 
   <script src="/Backend/adminCupones.js"></script>
 </body>
