--- a/frontend/vistas/admin.html
+++ b/frontend/vistas/admin.html
@@ -10,7 +10,14 @@
 <body class="admin">
   <header>
     <nav>
-      <div class="logo"><i class="fa-solid fa-gear"></i> VetCarruseles Admin</div>
+      <div class="logo"><i class="fa-solid fa-gear"></i> VetCare Admin</div>
+      <ul>
+      <li><a href="/frontend/vistas/admin.html">Admin</a></li>
+      <li><a href="/frontend/vistas/verUsuarios/GestionarUser.html">Usuarios</a></li>
+      <li><a href="/frontend/vistas/formulario/listadelosformularios.html">Solicitudes</a></li>
+      <li><a href="/frontend/vistas/Metricas/metricas.html">Metricas</a></li>    
+      <li><a href="/frontend/vistas/cupones/gestionCupones.html">Cupones</a></li>
+      </ul>
     </nav>
   </header>
 
@@ -26,11 +33,6 @@
       <a href="/frontend/vistas/verUsuarios/GestionarUser.html">
       <div class="card"><i class="fa-solid fa-user-gear"></i><h3>Gestionar usuarios</h3></div>
       </a>
-
-      <div class="card"><i class="fa-solid fa-box"></i><h3>Administrar productos</h3></div>
-     
-      <div class="card"><i class="fa-solid fa-paw"></i><h3>Controlar fichas de animales</h3></div>
-
       <a href="/frontend/vistas/cupones/gestionCupones.html">
       <div class="card"><i class="fa-solid fa-tags"></i><h3>Generar cupones</h3></div>
       </a>
