--- a/frontend/vistas/agregarMascota/mascota.html
+++ b/frontend/vistas/agregarMascota/mascota.html
@@ -4,22 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VetCare - Registrar Mascota</title>
-  <link rel="stylesheet" href="/veterinaria-proyecto/frontend/styles/">
-  <link rel="stylesheet" href="/veterinaria-proyecto/frontend/styles/registrar_mascota.css">
+  <link rel="stylesheet" href="/frontend/styles/styles.css">
+  <link rel="stylesheet" href="/frontend/styles/registrar_mascota.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body class="usuario">
   <!-- Header / Navbar -->
   <header>
     <nav>
-      <div class="logo"><i class="fa-solid fa-paw"></i> VetCare</div>
+      <div class="logo"><i class="fa-solid fa-paw"></i> VetCarruseles</div>
       <ul>
         <li><a href="../index.html">Inicio</a></li>
-        <li><a href="#">Adopciones</a></li>
-        <li><a href="#">Tienda</a></li>
-        <li><a href="../vistas/IngresarMascota/mascota.html">Mis mascotas</a></li>
+        <li><a href="/frontend/vistas/adopciones/adopciones.html">Adopciones</a></li>
+        <li><a href="/frontend/vistas/tienda/tienda.html">Tienda</a></li>
       </ul>
-      <i class="fa-solid fa-bars menu-toggle"></i>
     </nav>
   </header>
 
