--- a/frontend/vistas/formulario/adicion-detalle.html
+++ b/frontend/vistas/formulario/adicion-detalle.html
@@ -5,20 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VetCare - Revisar Adopción</title>
   <link rel="stylesheet" href="/frontend/styles/styles.css">
+  <link rel="stylesheet" href="/frontend/styles/adicionDetalle.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body class="admin">
 
-<header>
-  <nav>
-    <div class="logo"><i class="fa-solid fa-gear"></i> VetCare Admin</div>
-    <ul>
-      <li><a href="#">Usuarios</a></li>
-      <li><a href="#">Adopciones</a></li>
-      <li><a href="#">Reportes</a></li>
-    </ul>
-  </nav>
-</header>
+  <header>
+    <nav>
+      <div class="logo"><i class="fa-solid fa-gear"></i> VetCare Admin</div>
+      <ul>
+      <li><a href="/frontend/vistas/admin.html">Admin</a></li>
+      <li><a href="/frontend/vistas/verUsuarios/GestionarUser.html">Usuarios</a></li>
+      <li><a href="/frontend/vistas/formulario/listadelosformularios.html">Solicitudes</a></li>
+      <li><a href="/frontend/vistas/Metricas/metricas.html">Fichas</a></li>    
+      <li><a href="/frontend/vistas/cupones/gestionCupones.html">Cupones</a></li>
+      </ul>
+    </nav>
+  </header>
 <main class="adopcion-review">
 
   <h1>Revisión de Solicitud de Adopción</h1>
