--- a/frontend/vistas/formulario/listadelosformularios.html
+++ b/frontend/vistas/formulario/listadelosformularios.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="/frontend/styles/styles.css">
 
-  <link rel="stylesheet" href="/frontend/styles/adopcionesList.css">
+  <link rel="stylesheet" href="/frontend/styles/ListadelosFormulariosStyles.css">
 
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -22,8 +22,7 @@
       <ul>
       <li><a href="/frontend/vistas/admin.html">Admin</a></li>
       <li><a href="/frontend/vistas/verUsuarios/GestionarUser.html">Usuarios</a></li>
-      <li><a href="adopciones.html">Productos</a></li>
-      <li><a href="/frontend/vistas/Metricas/metricas.html">Fichas</a></li>    
+      <li><a href="/frontend/vistas/Metricas/metricas.html">Metricas</a></li>    
       <li><a href="/frontend/vistas/cupones/gestionCupones.html">Cupones</a></li>
       </ul>
     </nav>
