--- a/frontend/vistas/tienda/tienda.html
+++ b/frontend/vistas/tienda/tienda.html
@@ -4,17 +4,18 @@
   <meta charset="UTF-8">
   <title>Tienda Veterinaria</title>
   <link rel="stylesheet" href="/frontend/styles/tienda.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <script src="https://kit.fontawesome.com/a2e0b1d4e0.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
   <header>
     <nav>
-      <div class="logo"><i class="fa-solid fa-paw"></i> VetCare</div>
+      <div class="logo"><i class="fa-solid fa-paw"></i> VetCarruseles</div>
       <ul>
         <li><a href="../index.html">Inicio</a></li>
-        <li><a href="#">Adopciones</a></li>
-        <li><a href="#">Mis Mascotas</a></li>
+        <li><a href="/src/adopciones/pagina-adopcion.html">Adopciones</a></li>
+        <li><a href="/frontend/vistas/agregarMascota/mascota.html">Mis Mascotas</a></li>
       </ul>
     </nav>
   </header>
