--- a/frontend/vistas/verUsuarios/verusuario.html
+++ b/frontend/vistas/verUsuarios/verusuario.html
@@ -12,13 +12,12 @@
 
   <header>
     <nav>
-      <div class="logo" id="logo"><i class="fa-solid fa-stethoscope"></i> VetCare Doctor</div>
+      <div class="logo"><i class="fa-solid fa-stethoscope"></i> VetCarruseles Doctor</div>
       <ul>
-        <li><a href="#">Consultas</a></li>
-        <li><a href="#">Pacientes</a></li>
-        <li><a href="../Verhistorial/Acthistorial.html">Historial</a></li>
-        <li><a href="../doc.html">Inicio</a></li>
-    </ul>
+        <li><a href="/frontend/vistas/doc.html">Inicio</a></li>
+        <li><a href="https://wa.me">Consultas</a></li>
+        <li><a href="/frontend/vistas/Verhistorial/Acthistorial.html">Historial</a></li>
+      </ul>
     </nav>
   </header>
 
@@ -45,12 +44,6 @@
     </div>
 
   </main>
-
-  <footer>
-    <p><i class="fa-solid fa-stethoscope"></i> VetCare - Doctor</p>
-    <p class="copy">© 2025 VetCare - Todos los derechos reservados</p>
-  </footer>
-
   <script>
     // Logo redirige al index del doctor
     document.getElementById('logo').addEventListener('click', () => {
