--- a/frontend/vistas/formulario/formulario.html
+++ b/frontend/vistas/formulario/formulario.html
@@ -14,9 +14,9 @@
       <div class="logo"><i class="fa-solid fa-paw"></i> VetCare</div>
       <ul>
         <li><a href="../index.html">Inicio</a></li>
-        <li><a href="#">Adopciones</a></li>
-        <li><a href="#">Tienda</a></li>
-        <li><a href="#">Mis Mascotas</a></li>
+        <li><a href="/src/adopciones/pagina-adopcion.html">Adopciones</a></li>
+        <li><a href="/frontend/vistas/tienda/tienda.html">Tienda</a></li>
+        <li><a href="/frontend/vistas/agregarMascota/mascota.html">Mis Mascotas</a></li>
       </ul>
     </nav>
   </header>
