--- a/frontend/vistas/index.html
+++ b/frontend/vistas/index.html
@@ -14,18 +14,16 @@
       <div class="logo"><i class="fa-solid fa-paw"></i> VetCarruseles</div>
       <ul>
         <li><a href="#">Inicio</a></li>
-        <li><a href="#">Adopciones</a></li>
-        <li><a href="#">Tienda</a></li>
-        <li><a href="#">Mis Mascotas</a></li>
+        <li><a href="/src/adopciones/pagina-adopcion.html">Adopciones</a></li>
+        <li><a href="/frontend/vistas/tienda/tienda.html">Tienda</a></li>
+        <li><a href="/frontend/vistas/agregarMascota/mascota.html">Mis Mascotas</a></li>
       </ul>
-      <div class="logo"><i class="fa-solid fa-paw"></i> VetCare</div>
     </nav>
   </header>
 
   <section class="hero">
     <h1>Bienvenido a Veterinaria Los carruseles 🐾</h1>
     <p>Adopta, compra productos y cuieda la salud de tus mascotas <br>¡Todo desde un solo lugar!</p>
-    <button class="btn">Ver animales disponibles</button>
   </section>
 
   <section>
