--- a/frontend/vistas/verUsuarios/GestionarUser.html
+++ b/frontend/vistas/verUsuarios/GestionarUser.html
@@ -6,8 +6,7 @@
   <title>VetCare - Usuarios</title>
 
   <link rel="stylesheet" href="/frontend/styles/GestionUser.css">
-  <link rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 
@@ -18,8 +17,7 @@
     <div class="logo"><i class="fa-solid fa-gear"></i> VetCare Admin</div>
     <ul>
       <li><a href="/frontend/vistas/admin.html">Admin</a></li>
-      <li><a href="/frontend/vistas/Formulario/Listadelosfornularios.html">Solicitudes</a></li>
-      <li><a href="adopciones.html">Productos</a></li>
+      <li><a href="/frontend/vistas/formulario/listadelosformularios.html">Solicitudes</a></li>
       <li><a href="/frontend/vistas/Metricas/metricas.html">Fichas</a></li>    
       <li><a href="/frontend/vistas/cupones/gestionCupones.html">Cupones</a></li>
     </ul>
