--- a/frontend/vistas/admin.html
+++ b/frontend/vistas/admin.html
@@ -10,7 +10,10 @@
 <body class="admin">
   <header>
     <nav>
-      <div class="logo"><i class="fa-solid fa-gear"></i> VetCare Admin</div>
+      <div class="logo">
+        <img src="/src/img/vete.jpg" alt="Logo Veterinaria Los Carruseles" class="logo-img">
+        VetCarruseles
+      </div>
       <ul>
       <li><a href="/frontend/vistas/admin.html">Admin</a></li>
       <li><a href="/frontend/vistas/verUsuarios/GestionarUser.html">Usuarios</a></li>
