--- a/frontend/vistas/doc.html
+++ b/frontend/vistas/doc.html
@@ -10,7 +10,10 @@
 <body class="doctor">
   <header>
     <nav>
-      <div class="logo"><i class="fa-solid fa-stethoscope"></i> VetCarruseles Doctor</div>
+      <div class="logo">
+        <img src="/src/img/vete.jpg" alt="Logo Veterinaria Los Carruseles" class="logo-img">
+        VetCarruseles
+      </div>
       <ul>
         <li><a href="/frontend/vistas/doc.html">Inicio</a></li>
         <li><a href="https://wa.me">Consultas</a></li>
