--- a/frontend/vistas/tienda/tienda.html
+++ b/frontend/vistas/tienda/tienda.html
@@ -25,25 +25,7 @@
       <h2>Productos disponibles</h2>
 
       <div id="lista-productos">
-
-        <div class="producto" data-id="1">
-          <h3>Alimento para perros</h3>
-          <p>Precio: $3500</p>
-          <button class="btn-agregar">Agregar al carrito</button>
-        </div>
-
-        <div class="producto" data-id="2">
-          <h3>Juguete para gato</h3>
-          <p>Precio: $1200</p>
-          <button class="btn-agregar">Agregar al carrito</button>
-        </div>
-
-        <div class="producto" data-id="3">
-          <h3>Shampoo para mascotas</h3>
-          <p>Precio: $2500</p>
-          <button class="btn-agregar">Agregar al carrito</button>
-        </div>
-
+        <!-- Los productos se cargarán dinámicamente desde la API -->
       </div>
     </section>
 
