--- a/frontend/vistas/formulario/formulario.html
+++ b/frontend/vistas/formulario/formulario.html
@@ -25,7 +25,7 @@
     <section class="form-adopcion">
       <h2>Formulario de Adopción</h2>
 
-      <form action="procesar.php" method="POST" class="adopt-form">
+      <form action= method="POST" class="adopt-form">
 
   <h3>Información del hogar</h3>
 
